--- a/404.html
+++ b/404.html
@@ -70,23 +70,6 @@
                     <li><a href="blog.html">Bloq</a></li>
                     <li><a href="contact.html">Əlaqə</a></li>
                 </ul>
-                <ul class="mobile-socials">
-                    <li>
-                        <a href="https://facebook.com/" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://instagram.com/" target="_blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://youtube.com/" target="_blank">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </div>
     </header>
@@ -124,8 +107,8 @@
         </div>
         <div class="content-wrapper">
             <div class="container container-md">
-                <div class="row g-5">
-                    <div class="col-lg-4">
+                <div class="row gy-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
                             <h4>Menu</h4>
                             <ul class="menu-list">
@@ -137,7 +120,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
                             <h4>Contact info</h4>
                             <ul class="contact-list">
@@ -156,26 +139,28 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="footer-box">
-                            <h4>Socials</h4>
-                            <ul class="social-list">
-                                <li>
-                                    <a href="https://facebook.com/" target="_blank">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://instagram.com/" target="_blank">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://youtube.com/" target="_blank">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                    <div class="col-md-12 col-xl-4">
+                        <div class="footer-box social">
+                            <div>
+                                <h4>Socials</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="https://facebook.com/" target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://instagram.com/" target="_blank">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://youtube.com/" target="_blank">
+                                            <i class="fab fa-youtube"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="footer-logo">
                                 <a href="index.html">
                                     <!-- <img src="img/logo/logo-primary.svg" alt=""> -->
