--- a/product-inner.html
+++ b/product-inner.html
@@ -21,15 +21,24 @@
     <header id="header" class="primary-header">
         <div class="container">
             <nav class="primary-nav">
-                <a href="index.html" class="header-logo">
-                    <!-- <img src="img/logo/logo-primary.svg" alt=""> -->
-                    <h1>arı<span>CI</span></h1>
-                </a>
-                <div class="header-menu">
+                <div class="menu-toggle d-xl-none">
+                    <div class="menu-bars">
+                        <span class="bar-1"></span>
+                        <span class="bar-2"></span>
+                        <span class="bar-3"></span>
+                    </div>
+                </div>
+                <div class="header-logo">
+                    <a href="index.html" class="d-block">
+                        <!-- <img src="img/logo/logo-primary.svg" alt=""> -->
+                        <h1>arı<span>CI</span></h1>
+                    </a>
+                </div>
+                <div class="header-menu d-none d-xl-block">
                     <ul>
                         <li><a href="index.html">Ana səhifə</a></li>
                         <li><a href="about.html">Haqqımızda</a></li>
-                        <li><a href="products.html" class="active">Məhsullar</a></li>
+                        <li><a class="active" href="products.html">Məhsullar</a></li>
                         <li><a href="gallery.html">Qalereya</a></li>
                         <li><a href="blog.html">Bloq</a></li>
                         <li><a href="contact.html">Əlaqə</a></li>
@@ -37,15 +46,31 @@
                 </div>
                 <div class="header-contact">
                     <ul>
-                        <li>
-                            <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum, dolor sit amet consectetur.</a>
+                        <li class="d-none d-xl-block">
+                            <a href="#">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                            </a>
                         </li>
                         <li>
-                            <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
+                            <a href="tel:+994703331872">
+                                <i class="fas fa-phone-alt"></i>
+                                <span>+994703331872</span>
+                            </a>
                         </li>
                     </ul>
                 </div>
             </nav>
+            <div class="mobile-menu">
+                <ul class="mobile-nav">
+                    <li><a href="index.html">Ana səhifə</a></li>
+                    <li><a href="about.html">Haqqımızda</a></li>
+                    <li><a class="active" href="products.html">Məhsullar</a></li>
+                    <li><a href="gallery.html">Qalereya</a></li>
+                    <li><a href="blog.html">Bloq</a></li>
+                    <li><a href="contact.html">Əlaqə</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main id="product-inner-content">
@@ -85,18 +110,12 @@
                                         <a href="img/products/product-1.png" data-fancybox="gallery" class="swiper-slide">
                                             <img src="img/products/product-1.png" />
                                         </a>
-                                        <a href="img/products/product-1.png" data-fancybox="gallery" class="swiper-slide">
-                                            <img src="img/products/product-1.png" />
-                                        </a>
                                     </div>
                                     <div class="swiper-button-next"></div>
                                     <div class="swiper-button-prev"></div>
                                 </div>
                                 <div thumbsSlider="" class="swiper-container productThumbSwiper">
                                     <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <img src="img/products/product-1.png" />
-                                        </div>
                                         <div class="swiper-slide">
                                             <img src="img/products/product-1.png" />
                                         </div>
@@ -139,8 +158,8 @@
             <div class="container container-md">
                 <h3 class="inner-section-heading">Related products</h3>
                 <div class="content-wrapper">
-                    <div class="row g-4">
-                        <div class="col-lg-3">
+                    <div class="row gy-5 gx-5">
+                        <div class="col-md-6 col-lg-4">
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
@@ -150,7 +169,7 @@
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-6 col-lg-4">
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
@@ -160,17 +179,7 @@
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
                         </div>
-                        <div class="col-lg-3">
-                            <div class="product-box">
-                                <a href="product-inner.html">
-                                    <img src="img/products/product-1.png" alt="">
-                                    <h3>Organic Honey</h3>
-                                    <span><del>$24.33</del>$13.25</span>
-                                </a>
-                                <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-3">
+                        <div class="col-md-6 col-lg-4">
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
@@ -191,8 +200,8 @@
         </div>
         <div class="content-wrapper">
             <div class="container container-md">
-                <div class="row g-5">
-                    <div class="col-lg-4">
+                <div class="row gy-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
                             <h4>Menu</h4>
                             <ul class="menu-list">
@@ -204,7 +213,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
                             <h4>Contact info</h4>
                             <ul class="contact-list">
@@ -223,26 +232,28 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="footer-box">
-                            <h4>Socials</h4>
-                            <ul class="social-list">
-                                <li>
-                                    <a href="https://facebook.com/" target="_blank">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://instagram.com/" target="_blank">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://youtube.com/" target="_blank">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                    <div class="col-md-12 col-xl-4">
+                        <div class="footer-box social">
+                            <div>
+                                <h4>Socials</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="https://facebook.com/" target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://instagram.com/" target="_blank">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://youtube.com/" target="_blank">
+                                            <i class="fab fa-youtube"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="footer-logo">
                                 <a href="index.html">
                                     <!-- <img src="img/logo/logo-primary.svg" alt=""> -->
