--- a/products.html
+++ b/products.html
@@ -37,8 +37,8 @@
                 <div class="header-menu d-none d-xl-block">
                     <ul>
                         <li><a href="index.html">Ana səhifə</a></li>
-                        <li><a class="active" href="about.html">Haqqımızda</a></li>
-                        <li><a href="products.html">Məhsullar</a></li>
+                        <li><a href="about.html">Haqqımızda</a></li>
+                        <li><a class="active" href="products.html">Məhsullar</a></li>
                         <li><a href="gallery.html">Qalereya</a></li>
                         <li><a href="blog.html">Bloq</a></li>
                         <li><a href="contact.html">Əlaqə</a></li>
@@ -64,8 +64,8 @@
             <div class="mobile-menu">
                 <ul class="mobile-nav">
                     <li><a href="index.html">Ana səhifə</a></li>
-                    <li><a class="active" href="about.html">Haqqımızda</a></li>
-                    <li><a href="products.html">Məhsullar</a></li>
+                    <li><a href="about.html">Haqqımızda</a></li>
+                    <li><a class="active" href="products.html">Məhsullar</a></li>
                     <li><a href="gallery.html">Qalereya</a></li>
                     <li><a href="blog.html">Bloq</a></li>
                     <li><a href="contact.html">Əlaqə</a></li>
